# dicomer_all_in_one

./: .gitignore  README.md  check_dicom_tags.py  correlation_analyzer.py  create_title_comparison.py  inspect_dicom_header.py  main.py  napari_listener.py  pyproject.toml  quick_nifti_test.py  read.py  requirements.txt  run_rigid_transform.py  tatus  test_correlation_title_fix.py  test_custom_nifti_analysis.py  test_direct_resampling.py  test_drm_comparator.py  test_drm_comparator_gui.py  test_drm_converter.py  test_drm_resampling_workflow.py  test_english_labels.py  test_font_fix.py  test_gui_custom_features.py  test_nifti_correlation.py  test_precision.py  test_simple_font_fix.py  test_write_rtss.py  verify_outputs.py
docs/: correlation_analysis_guide.md  drm_comparator_dvf_analysis.md  drm_comparator_gui_guide.md  font_fix_guide.md  rtss_centroid_alignment.md
dvf_viewer-main/: .gitignore  README.md  __init__.py  main.py  requirements.txt
dvf_viewer-main/utils/: file_reader.py  normalizer.py
dvf_viewer-main/visualization/: __init__.py  plotter.py  state.py
output/clean_title_test/: clean_title_test_两个图像都非零的像素_20250629_232015.csv
output/direct_resampling_correlation/: direct_resampling_correlation_两个图像都非零的像素_20250629_230449.csv
output/drm_resampling_correlation/: DRM_resampled_correlation_两个图像都非零的像素_20250629_211433.csv
output/drm_size_mismatch_demo/: DRM_size_mismatch_demo_两个图像都非零的像素_20250629_211434.csv
output/english_labels_test/: DRM_correlation_analysis_两个图像都非零的像素_20250629_210856.csv
output/medical_test/: medical_analysis_两个图像都非零的像素_20250629_205423.csv
output/mixed_labels_test/: mixed_lang_test_两个图像都非零的像素_20250629_210857.csv
output/nifti_correlation_test/: nifti_correlation_DRM_nii_vs_targetDRM_nii_两个图像都非零的像素_20250629_202133.csv  nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像的所有正值像素_20250629_202133.csv  nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像的所有非零像素_20250629_202132.csv  nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像超过阈值的像素__0_1__20250629_202134.csv
output/nifti_correlation_test/non_zero_both/: nifti_correlation_DRM_nii_vs_targetDRM_nii_两个图像都非零的像素_20250629_204053.csv
output/nifti_correlation_test/non_zero_first/: nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像的所有非零像素_20250629_204053.csv
output/nifti_correlation_test/positive_first/: nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像的所有正值像素_20250629_204054.csv
output/nifti_correlation_test/threshold_first/: nifti_correlation_DRM_nii_vs_targetDRM_nii_第一个图像超过阈值的像素__0_1__20250629_204054.csv
output/quick_test/: nifti_correlation_DRM_nii_vs_targetDRM_nii_两个图像都非零的像素_20250629_204355.csv
output/simple_font_test/: font_test_两个图像都非零的像素_20250629_210730.csv  font_test_两个图像都非零的像素_20250629_210805.csv
output/simple_test/: simple_两个图像都非零的像素_20250629_205424.csv
output/test_drm_comparator/nifti_correlation_output/: nifti_correlation_targetDRM_nii_vs_test_target_space_output_nii_第一个图像的所有非零像素_20250629_204601.csv  nifti_correlation_两个图像都非零的像素_20250629_210211.csv  nifti_correlation_第一个图像的所有非零像素_20250629_211649.csv
rtsscode/: ConvertNII2RTSS.py  NII2RTSS.py
scripts/: test_centroid_calculation.py  test_rigid_transform.py
src/: __init__.py  debug_utils.py
src/core/: dicom_utils.py  rtstruct_utils.py
src/core/dvf/: __init__.py  file_reader.py  plotter.py  state.py
src/gui/: __init__.py  dicom_editor.py  main_window.py
src/gui/modules/: drm_comparator_gui.py  rtss_copier.py
src/gui/widgets/: __init__.py  dicom_editor.py  dvf_viewer.py  range_slider.py  vtk_widget.py
src/modules/correlation_analyzer/: __init__.py  correlation_analyzer.py
src/modules/drm_comparator/: drm_comparator.py  drm_comparator_gui.py
src/modules/drm_converter/: __init__.py  drm_converter_gui.py  drm_converter_main.py  rtss_highdicom_util.py  rtss_pyradise_util.py  test_rtss_pyradise_util.py
src/modules/dvf_applier/: __init__.py  dvf_applier.py
(+4 files in other folders)
