[project]
name = "dicomer-all-in-one"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alabaster==1.0.0",
    "annotated-types==0.7.0",
    "app-model==0.3.1",
    "appdirs==1.4.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "build==1.2.2.post1",
    "cachey==0.2.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "crc32c==2.7.1",
    "cycler==0.12.1",
    "dask==2025.4.1",
    "dataclasses==0.8",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "docstring-parser==0.16",
    "docutils==0.21.2",
    "donfig==0.8.1.post1",
    "executing==2.2.0",
    "flexcache==0.3",
    "flexparser==0.4",
    "fonttools==4.57.0",
    "freetype-py==2.5.1",
    "fsspec==2025.3.2",
    "heapdict==1.0.1",
    "hsluv==5.0.4",
    "idna==3.10",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "in-n-out==0.2.1",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "llvmlite==0.44.0",
    "locket==1.0.0",
    "magicgui==0.10.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "napari==0.5.6",
    "napari-console==0.1.3",
    "napari-plugin-engine==0.2.0",
    "napari-plugin-manager==0.1.5",
    "napari-svg==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nibabel>=5.3.2",
    "npe2==0.7.8",
    "numba==0.61.2",
    "numcodecs==0.16.0",
    "numpy==2.2.5",
    "numpydoc==1.8.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "partd==1.4.2",
    "partsegcore-compiled-backend==0.15.12",
    "pillow==11.2.1",
    "pint==0.24.4",
    "pip==25.1",
    "platformdirs==4.3.7",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "psygnal==0.12.0",
    "pure-eval==0.2.3",
    "pyconify==0.2.1",
    "pydantic==2.11.4",
    "pydantic-compat==0.1.2",
    "pydantic-core==2.33.2",
    "pydicom==3.0.1",
    "pygments==2.19.1",
    "pyopengl==3.1.9",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyvista==0.45.0",
    "pyvistaqt==0.11.2",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "qtconsole==5.6.1",
    "qtpy==2.4.3",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "roman-numerals-py==3.1.0",
    "rpds-py==0.24.0",
    "rt-utils==1.2.7",
    "scikit-image==0.25.2",
    "scipy==1.15.2",
    "scooby==0.10.1",
    "shellingham==1.5.4",
    "simpleitk==2.5.0",
    "six==1.17.0",
    "snowballstemmer==2.2.0",
    "sphinx==8.2.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stack-data==0.6.3",
    "superqt==0.7.3",
    "tabulate==0.9.0",
    "tifffile==2025.3.30",
    "tomli-w==1.2.0",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triangle==20250106",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "vispy==0.14.3",
    "vtk==9.4.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.2",
    "zarr==3.0.7",
]
